Fixed issue with main navigation not showing the the proper color when a navigation button is not clicked

--- a/gui/static/css/main.css
+++ b/gui/static/css/main.css
@@ -333,6 +333,10 @@ a.currentlink {
   color: #FF8100;
 }
 
+a.navlink {
+  color: #c4c4c5;
+}
+
 .label-toggle {
   margin-left: 10px;
   width: 100%;
@@ -363,7 +367,6 @@ a.currentlink {
 .bottom-left {
   background-color: #f4f6f9;
   height: 10%;
-  align:
 }
 
 .right-half {
